# mezzanine-announcements

./: .editorconfig  .gitignore  .releaserc  .travis.yml  .versionrc  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  mezzanine-announcements.sublime-project  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
announcements/: __init__.py  admin.py  apps.py  context_processors.py  defaults.py  models.py  urls.py  views.py
announcements/migrations/: 0001_initial.py  0002_add_extra_content_video_link_and_announcement_type_fields.py  0002_auto__add_field_announcement_content.py  0002_auto__add_field_announcement_image__add_field_announcement_button_dism.py  0002_auto__add_field_announcement_template.py  0003_auto__add_field_announcement_can_dismiss.py  0003_auto__add_field_announcement_expire_days.py  0003_template_field_refactor.py  0004_auto__del_field_announcement_message__add_field_announcement_title.py  0004_expire_days_default.py  0005_auto__del_field_announcement_url.py  0005_default_start_day.py  0006_auto__add_field_announcement_announcement_type.py  0006_convert_textfield_to_richtextfield.py  0007_siterelated_announcement.py  0008_sort_by_date_start.py
announcements/south_migrations/: 0001_initial.py  0003_auto__add_field_announcement_appearance_delay.py  0004_auto__add_field_announcement_form.py  0005_auto__add_field_announcement_video_link.py  0006_auto__add_field_announcement_extra_content.py
announcements/static/js/: announcements.js
announcements/templates/announcements/: announcement.html  announcements.html
announcements/templatetags/: announcements_tags.py
