[metadata]
name = mezzanine-announcements
version = attr: announcements.__version__
description = Site-wide announcements for Mezzanine websites
long_description = file: README.md
long_description_content_type = text/markdown
keywords = django, mezzanine, announcement, popup, banner, alert
author = Unplug Studio
author_email = developers@unplug.studio
url = http://github.com/unplugstudio/mezzanine-announcements
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = announcements
include_package_data = true
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5*
install_requires =
    mezzanine >= 4
    django >= 1.8

[options.extras_require]
testing =
    django-dynamic-fixture >=3, <4
    django-functest >=1, <2
    pytest-django >= 3, <4

# Building

[bdist_wheel]
universal = 1

# Testing

[tox:tox]
envlist =
    py27
    py36
    py37
    py38
    flake8
    black
    package

[testenv]
# Run test suite
deps =
    .[testing]
setenv =
    PYTHONPATH={toxinidir}
commands =
    pytest --basetemp="{envtmpdir}" --ignore mezzanine-announcements-0.0.dev0 {posargs}

[testenv:package]
# Check package integrity and compatibility with PyPI
deps =
    twine
    check-manifest
skip_install = true
commands =
    python setup.py -q sdist --dist-dir="{envtmpdir}/dist"
    twine check "{envtmpdir}/dist/*"
    check-manifest --ignore-bad-ideas '*.mo' {toxinidir}

[testenv:format]
# This env is not run by default. It's provided here for you
# to easily autoformat code by running `tox -e format`
skip_install = true
deps = black==20.8b1
commands = black .

[testenv:black]
# Lint with black
skip_install = true
deps = {[testenv:format]deps}
commands = black . --check

[testenv:flake8]
# Lint with flake8
basepython=python2.7
skip_install = true
deps = flake8 >= 3, <4
commands = flake8 .

[flake8]
# Configured to match black
ignore =
    E203
    W503
    E731
max-line-length = 88
exclude =
    migrations
    .tox
    .git
    .eggs
    *.egg-info
    build
    dist

[gh-actions]
# Connect GitHub Action matrices with tox envs
python =
    2.7: py27, flake8
    3.6: py36
    3.7: py37
    3.8: py38, black, package
